# archon

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/skills/: pydantic-ai.md  pyrefly.md  uv.md
docs/: architecture.md
docs/adr/: 001-use-pydantic-ai.md  002-model-gateway.md  003-agentic-pipeline.md  004-trunk-based-git.md  005-prompt-management.md  006-built-in-service-catalog.md  007-structured-output-only.md  008-tech-stack-python-uv-pyrefly.md  README.md
prompts/: step1_requirements.j2  step2_unknowns.j2  step3_design_drivers.j2  step4_candidates.j2  step5_tradeoffs.j2  step6_recommendation.j2  step7_risks.j2  step8_roadmap.j2  step9_deliverable.j2
src/archon/: __init__.py  _meta.py  config.py  exceptions.py
src/archon/models/: __init__.py  architecture.py  clarifications.py  design_drivers.py  project.py  recommendation.py  report.py  requirements.py  risks.py  roadmap.py  tradeoffs.py
src/archon/pipeline/: __init__.py  context.py  orchestrator.py  step1_requirements.py  step2_unknowns.py  step3_design_drivers.py  step4_candidates.py  step5_tradeoffs.py  step6_recommendation.py  step7_risks.py  step8_roadmap.py  step9_deliverable.py
src/archon/service_catalog/: __init__.py  ai_ml.py  analytics.py  base.py  compute.py  database.py  storage.py
src/archon/tools/: __init__.py
tests/: conftest.py  test_models.py
tests/test_pipeline/: test_agents.py  test_context.py  test_orchestrator.py
tests/test_tools/: test_calculator.py  test_service_catalog.py
