[project]
name = "archon"
version = "0.1.0"
description = "AI-Powered Cloud Architecture Assistant"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai",
    "jinja2>=3.0",
    "httpx",
]

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
